--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 </style>
 </head>
 <body>
-  <button class="custom-button">Interested in talking to me? </button>
+  <a class="custom-button" href="https://calendly.com/ravivijay/quick30" target="_blank">Interested in talking to me? </a>
 </body>
 </html>
